Add missing acknowledged dates to config

--- a/_config.yml
+++ b/_config.yml
@@ -4611,7 +4611,7 @@ issues:
     pages:
     - 182
     - 182
-    acknowledged: []
+    acknowledged: '2014-02-12'
     online: '2014-03-03'
   - title: R Foundation News
     bibtitle: '{R} {F}oundation News'
@@ -8902,7 +8902,7 @@ issues:
     pages:
     - 307
     - 323
-    acknowledged: []
+    acknowledged: '2016-03-24'
     online: '2016-09-09'
     CRANpkgs:
     - rsubgroup
@@ -16448,7 +16448,7 @@ issues:
       as the capability of specifying trend functions and            noise terms.
       Examples are studied herein to highlight the performance of the package in terms
       of            out-of-sample prediction.'
-    acknowledged: []
+    acknowledged: '2018-09-11'
     online: '2019-08-15'
     CRANpkgs:
     - DiceKriging
@@ -17284,7 +17284,7 @@ issues:
       original proposal. Its usefulness is also assessed through a real-world data            example.
       Based on these results, we conclude unival is a valuable tool for use in applications
       in which            the dimensionality of an item set is to be assessed.'
-    acknowledged: []
+    acknowledged: '2019-03-18'
     online: '2019-08-20'
     CRANpkgs:
     - unival
@@ -17444,7 +17444,7 @@ issues:
       problems with user-specified objective functions, which works as a drop-in version
       of            optim(). The package also serves as a platform for future methodology
       developments along this line            of work.'
-    acknowledged: []
+    acknowledged: '2018-09-08'
     online: '2019-07-30'
     CRANpkgs:
     - orthoDr
@@ -17601,7 +17601,7 @@ issues:
       data matrix to have missing values. We provide           a new R package, biclustermd,
       which allows users to perform biclustering on numeric data even in           the
       presence of missing values.'
-    acknowledged: []
+    acknowledged: '2018-10-30'
     online: '2019-12-27'
     CRANpkgs:
     - biclust
@@ -18120,7 +18120,7 @@ issues:
       data, as well as inferential tools for           testing differences and dependency
       among families of curves will be discussed, and the associated           functions
       of the package will be described in details.'
-    acknowledged: []
+    acknowledged: '2018-12-18'
     online: '2019-08-17'
     CRANpkgs: R
     suppl: 1.3 Kb
@@ -18191,7 +18191,7 @@ issues:
       expressions and their usage in R. We then describe the new features of            the
       namedCapture package, and provide detailed comparisons with related R packages
       (rex, stringr,            stringi, tidyr, rematch2, re2r).'
-    acknowledged: []
+    acknowledged: '2019-02-25'
     online: '2019-12-27'
     CRANpkgs:
     - namedCapture
@@ -18229,7 +18229,7 @@ issues:
       Data Analysis (autoEDA). We explore            the features of fifteen popular
       R packages to identify the parts of analysis that can be effectively            automated
       with the current tools and to point out new directions for further autoEDA development.'
-    acknowledged: []
+    acknowledged: '2019-03-27'
     online: '2019-08-17'
     CRANpkgs:
     - cranlogs
@@ -18307,7 +18307,7 @@ issues:
       for prediction. This paper illustrates the R            implementation of the
       new ideas in the package HCmodelSets, using simple reproducible examples            and
       real data. Results of some simulation experiments are also reported.'
-    acknowledged: []
+    acknowledged: '2019-03-28'
     online: '2020-01-06'
     CRANpkgs:
     - HCmodelSets
@@ -18350,7 +18350,7 @@ issues:
       user interface for plausible            applications in academia and other educational
       purpose. Several motivating examples illustrate the            application of
       the methods.'
-    acknowledged: []
+    acknowledged: '2019-04-08'
     online: '2019-12-27'
     CRANpkgs:
     - stats
@@ -18400,7 +18400,7 @@ issues:
       summarize the variety of spatial models, which can be estimated by the estimation
       functions           provided in the package. Eventually, we apply all procedures
       to a real-data example.'
-    acknowledged: []
+    acknowledged: '2019-04-30'
     online: '2019-12-28'
     CRANpkgs:
     - spGARCH
@@ -18716,7 +18716,7 @@ issues:
       etc. Here we describe how the tsmp package may be used by showing some of the            use-cases
       from the original articles and evaluate the algorithm speed in the R environment.
       This            package can be downloaded at https://CRAN.R-project.org/package=tsmp.'
-    acknowledged: []
+    acknowledged: '2019-01-04'
     online: '2020-09-10'
     CRANpkgs: tsmp
     landing: '2020'
@@ -18743,7 +18743,7 @@ issues:
       susceptible-infected (SI) or susceptible-infected-removed (SIR) compartmental
       frameworks. Use            of the package is demonstrated through examples involving
       both simulated and real data.'
-    acknowledged: []
+    acknowledged: '2019-03-04'
     online: '2020-09-10'
     CRANpkgs:
     - R0
@@ -18802,7 +18802,7 @@ issues:
       stratification. The proposed R package is also illustrated by an analysis            of
       gene expression data with survival outcome in The Cancer Genome Atlas study.
       In addition, a            detailed hands-on tutorial for SurvBoost is provided.'
-    acknowledged: []
+    acknowledged: '2019-03-24'
     online: '2020-09-10'
     CRANpkgs:
     - mboost
@@ -18850,7 +18850,7 @@ issues:
       hazards model assumptions and the stationarity assumption. We illustrate            usage
       of the package with a simulated data example and a real dataset, the Channing
       House data,            which are publicly available.'
-    acknowledged: []
+    acknowledged: '2019-04-12'
     online: '2020-09-10'
     CRANpkgs:
     - CoxPhLb
@@ -18888,7 +18888,7 @@ issues:
       and inference methods therein and            provides tools to visualize the
       results. This vignette serves as an introduction to the package and            displays
       basic functionality of the functions within.'
-    acknowledged: []
+    acknowledged: '2019-05-02'
     online: '2020-03-31'
     CRANpkgs:
     - SortedEffects
@@ -18932,7 +18932,7 @@ issues:
       KTP, S and Gaur’s Gc tests. A simulation study is conducted to determine which
       test            is the most appropriate test for which scenario and to suggest
       it to the researchers.'
-    acknowledged: []
+    acknowledged: '2019-05-14'
     online: '2020-09-10'
     CRANpkgs:
     - clinfun
@@ -18974,7 +18974,7 @@ issues:
       In particular,            valid confidence bands are provided. Finally, an extension
       to two-sample analysis is developed, which            can be used in treatment-control
       comparisons and related problems.'
-    acknowledged: []
+    acknowledged: '2019-06-06'
     online: '2020-03-31'
     CRANpkgs: ggplot2
     CTV_rev:
@@ -19012,7 +19012,7 @@ issues:
       indicates that use of the expected information matrix results in standard errors
       as accurate as,            and sometimes a little more accurate than, use of
       an observed information matrix.'
-    acknowledged: []
+    acknowledged: '2019-06-07'
     online: '2020-09-10'
     CRANpkgs: sn
     CTV_rev:
@@ -19046,7 +19046,7 @@ issues:
       contains tools for transforming spherical data in            cartesian and geographic
       coordinates into the HEALPix representation. We give a general description            of
       the package and illustrate some important functionalities and benchmarks.'
-    acknowledged: []
+    acknowledged: '2019-06-11'
     online: '2020-09-10'
     CRANpkgs:
     - sp
@@ -19104,7 +19104,7 @@ issues:
       or in an R script in a tidy data frame. The tidycode            package contains
       tools to allow for analyzing R calls in a tidy manner. We demonstrate the utility
       of            these packages as well as walk through two examples.'
-    acknowledged: []
+    acknowledged: '2019-06-14'
     online: '2020-09-10'
     CRANpkgs:
     - matahari
@@ -19191,7 +19191,7 @@ issues:
       as source material. We also discuss how            ari can help instructors
       reach new audiences through programmatically translating materials into            other
       languages.'
-    acknowledged: []
+    acknowledged: '2019-08-14'
     online: '2020-09-10'
     CRANpkgs:
     - ari
@@ -19248,7 +19248,7 @@ issues:
       tests (Wald, generalized score and likelihood ratio tests) are also provided.
       We use            two real data examples to illustrate the key functions in
       CopulaCenR.'
-    acknowledged: []
+    acknowledged: '2019-08-20'
     online: '2020-09-10'
     CRANpkgs:
     - CopulaCenR
@@ -19296,7 +19296,7 @@ issues:
       using two           specific composite distributions as well as a numerical
       example where a composite distribution is           estimated to describe the
       log-returns of selected stocks.'
-    acknowledged: []
+    acknowledged: '2019-08-14'
     online: '2019-12-27'
     CRANpkgs:
     - mistr
@@ -19343,7 +19343,7 @@ issues:
       package, from data generation, through            the model fitting and hypothesis
       testing, to graphical representation of the results. Finally, we provide            a
       real data example to bring the concepts together.'
-    acknowledged: []
+    acknowledged: .na.character
     online: '2020-09-10'
     CRANpkgs:
     - difR
@@ -19400,7 +19400,7 @@ issues:
       uncertainties            of estimates of any quantity of interest. These posteriors
       are fully available to the user, and the package            comes with convienient
       tools for summarizing and visualizing the posterior distributions.'
-    acknowledged: []
+    acknowledged: '2019-09-05'
     online: '2020-09-10'
     CRANpkgs:
     - BayesMallows
@@ -19430,7 +19430,7 @@ issues:
       to not only build state-of-the-art            by Brandon M. Greenwell, Bradley
       C. Boehmke            Introduction to the vip Package            Variable Importance
       Plots—An'
-    acknowledged: []
+    acknowledged: '2019-09-25'
     online: '2020-09-10'
     CRANpkgs:
     - iml
@@ -19627,7 +19627,7 @@ issues:
       paper, we introduce ProjectManagement, a new R package that provides the necessary
       tools to            manage projects in a broad sense, and illustrate its use
       by examples.'
-    acknowledged: []
+    acknowledged: '2020-01-17'
     online: '2020-09-10'
     CRANpkgs:
     - PlotPrjNetworks
@@ -22968,7 +22968,7 @@ issues:
       space adjusted approach can account for bias in            the estimation of
       social influence effects and how this approach can be easily implemented in
       R.'
-    acknowledged: []
+    acknowledged: '2019-11-15'
     online: '2021-08-17'
     CRANpkgs:
     - lavaan
@@ -23016,7 +23016,7 @@ issues:
       has            been motivated by recent contribution that provides answers to
       all these topics. An illustration of the            software usage is included
       using real data.'
-    acknowledged: []
+    acknowledged: '2020-02-24'
     online: '2021-08-17'
     CRANpkgs:
     - survidm
@@ -23350,7 +23350,7 @@ issues:
       time-varying            structures commonly encountered in time series and reliability/survival
       studies.                Keywords: Bayesian, classical inference, reliability,
       smoothing, time series, software R'
-    acknowledged: []
+    acknowledged: '2020-06-25'
     online: '2021-10-25'
     CRANpkgs:
     - StructTS
@@ -23397,7 +23397,7 @@ issues:
       provides            user-friendly functions for its implementation. The usage
       is illustrated by a real data analysis on the            association between
       bipolar disorder and rheumatoid arthritis.'
-    acknowledged: []
+    acknowledged: '2020-06-05'
     online: '2021-12-15'
     CRANpkgs:
     - BayesSenMC
@@ -23504,7 +23504,7 @@ issues:
       randomized clinical            trials with skewed outcomes. Further, the bcmixed
       package provides summarizing and visualization            tools, which would
       be helpful to write clinical trial reports.'
-    acknowledged: []
+    acknowledged: '2020-07-14'
     online: '2021-09-20'
     CRANpkgs:
     - bcmixed
@@ -24005,7 +24005,7 @@ issues:
       had not previously been at risk, and the            use of a frailty term. The
       usage of the package is illustrated by means of a real data example based on            an
       occupational cohort study and a simulation study.'
-    acknowledged: []
+    acknowledged: '2020-10-31'
     online: '2021-09-20'
     CRANpkgs:
     - miRecSurv
