Remove multiple acknowledged dates

--- a/_config.yml
+++ b/_config.yml
@@ -3227,9 +3227,7 @@ issues:
     pages:
     - 207
     - 209
-    acknowledged:
-    - '2013-02-08'
-    - '2013-02-15'
+    acknowledged: '2013-02-08'
     online: '2013-06-17'
     CRANpkgs:
     - rjags
@@ -3524,9 +3522,7 @@ issues:
     pages:
     - 62
     - 70
-    acknowledged:
-    - '2012-12-21'
-    - '2013-02-15'
+    acknowledged: '2012-12-21'
     online: '2013-08-16'
     CRANpkgs:
     - ExactCIdiff
@@ -3689,9 +3685,7 @@ issues:
     pages:
     - 104
     - 116
-    acknowledged:
-    - '2013-04-12'
-    - '2013-07-18'
+    acknowledged: '2013-04-12'
     online: '2013-11-18'
     CRANpkgs:
     - Matrix
@@ -5440,9 +5434,7 @@ issues:
     pages:
     - 38
     - 51
-    acknowledged:
-    - '2014-07-28'
-    - '2014-11-26'
+    acknowledged: '2014-07-28'
     online: '2015-04-23'
     CRANpkgs: rdrobust
     CTV_rev: Econometrics
@@ -7537,9 +7529,7 @@ issues:
     pages:
     - 257
     - 268
-    acknowledged:
-    - '2015-10-16'
-    - '2015-10-17'
+    acknowledged: '2015-10-16'
     online: '2016-05-01'
     CRANpkgs:
     - network
@@ -17767,9 +17757,7 @@ issues:
       other approaches in which economies are grouped a            priori, it also
       allows the endogenous determination of convergence clubs. The algorithm, usage,
       and            implementation details are discussed.'
-    acknowledged:
-    - '2018-12-06'
-    - '2018-12-07'
+    acknowledged: '2018-12-06'
     online: '2019-08-16'
     CRANpkgs:
     - ConvergenceClubs
@@ -24730,9 +24718,7 @@ issues:
       it proposes a set of good practices derived from those findings aiming to act
       as a            call-to-arms for both the R and RSE (Research SE) community
       to explore specific, interdisciplinary            paths of research.'
-    acknowledged:
-    - '2021-05-24'
-    - '2021-05-31'
+    acknowledged: '2021-05-24'
     online: '2021-12-14'
     landing: '2021'
     pages:
