Fix links to 2021-2 news

--- a/_config.yml
+++ b/_config.yml
@@ -24896,7 +24896,7 @@ issues:
     - '713'
     - '733'
   - heading: News and Notes
-  - slug: core/news
+  - slug: core
     author:
     - Tomas Kalibera
     - Sebastian Meyer
@@ -24922,7 +24922,7 @@ issues:
     pages:
     - '738'
     - '740'
-  - slug: bioconductor/bioconductor
+  - slug: bioc
     author: Bioconductor Core Team
     title: News from the Bioconductor Project
     bibtitle: News from the Bioconductor Project
@@ -24930,7 +24930,7 @@ issues:
     pages:
     - '741'
     - '741'
-  - slug: forwards/RJwrapper
+  - slug: forwards-news
     author: Heather Turner
     title: News from the Forwards Taskforce
     bibtitle: News from the Forwards Taskforce
