Add discussion article section to web issue

--- a/_config.yml
+++ b/_config.yml
@@ -22855,6 +22855,116 @@ issues:
     pages:
     - '4'
     - '5'
+  - heading: Discussion Article
+  - slug: RJ-2021-108
+    title: 'Software Engineering and R Programming: A Call for Research'
+    bibtitle: 'Software Engineering and R Programming: A Call for Research'
+    author: Melina Vidoni
+    bibauthor: Melina Vidoni
+    abstract: '  Abstract Although R programming has been a part of research since
+      its origins in the 1990s, few            studies address scientific software
+      development from a Software Engineering (SE) perspective. The            past
+      few years have seen unparalleled growth in the R community, and it is time to
+      push the boundaries            of SE research and R programming forwards. This
+      paper discusses relevant studies that close this            gap Additionally,
+      it proposes a set of good practices derived from those findings aiming to act
+      as a            call-to-arms for both the R and RSE (Research SE) community
+      to explore specific, interdisciplinary            paths of research.'
+    acknowledged: '2021-05-24'
+    online: '2021-12-14'
+    landing: '2021'
+    pages:
+    - '600'
+    - '623'
+  - slug: RJ-2021-109
+    title: We Need Trustworthy R Packages
+    bibtitle: We Need Trustworthy R Packages
+    author: William Michael Landau
+    bibauthor: William Michael Landau
+    abstract: '  Abstract There is a need for rigorous software engineering in R packages,
+      and there is a need for             new research to bridge scientific computing
+      with more traditional computing. Automated tools,             interdisciplinary
+      graduate courses, code reviews, and a welcoming developer community will continue             to
+      democratize best practices. Democratized software engineering will improve the
+      quality, correctness,             and integrity of scientific software, and
+      by extension, the disciplines that rely on it.'
+    acknowledged: '2021-08-24'
+    online: '2021-12-14'
+    CRANpkgs:
+    - testthat
+    - covr
+    - R6
+    landing: '2021'
+    pages:
+    - '661'
+    - '672'
+  - slug: RJ-2021-110
+    title: The R Developer Community Does Have a Strong Software Engineering Culture
+    bibtitle: |-
+      The R Developer Community Does Have a Strong Software
+                Engineering Culture
+    author:
+    - Maëlle Salmon
+    - Karthik Ram
+    bibauthor: Maëlle Salmon and Karthik Ram
+    abstract: '  Abstract There is a strong software engineering culture in the R
+      developer community. We recommend             creating, updating and vetting
+      packages as well as keeping up with community standards. We invite             contributions
+      to the rOpenSci project, where participants can gain experience that will shape
+      their            work and that of their peers.'
+    acknowledged: '2021-10-24'
+    online: '2021-12-14'
+    CRANpkgs:
+    - devtools
+    - roxygen2
+    - testthat
+    - tinytest
+    - dittodb
+    - vcr
+    - httptest
+    - webfakes
+    - httr2
+    - autotest
+    - goodpractice
+    - riskmetric
+    - pkgcheck
+    CTV_rev:
+    - WebTechnologies
+    - Databases
+    landing: '2021'
+    pages:
+    - '673'
+    - '696'
+  - slug: RJ-2021-111
+    title: 'The R Quest: from Users to Developers'
+    bibtitle: 'The R Quest: from Users to Developers'
+    author: Simon Urbanek
+    bibauthor: Simon Urbanek
+    abstract: '  Abstract R is not a programming language, and this produces the inherent
+      dichotomy between             analytics and software engineering. With the emergence
+      of data science, the opportunity exists to             bridge this gap, especially
+      through teaching practices.'
+    acknowledged: '2021-11-24'
+    online: '2021-12-14'
+    landing: '2021'
+    pages:
+    - '697'
+    - '712'
+  - slug: RJ-2021-112
+    title: 'Rejoinder: Software Engineering and R Programming'
+    bibtitle: 'Rejoinder: Software Engineering and R Programming'
+    author: Melina Vidoni
+    bibauthor: Melina Vidoni
+    abstract: '  Abstract It is a pleasure to take part in such fruitful discussion
+      about the relationship between Software             Engineering and R programming,
+      and what could be gain by allowing each to look more closely at the             other.
+      Several discussants make valuable arguments that ought to be further discussed.'
+    acknowledged: '2021-12-12'
+    online: '2021-12-14'
+    landing: '2021'
+    pages:
+    - '713'
+    - '733'
   - heading: Contributed Research Articles
   - slug: RJ-2021-064
     title: g2f as a Novel Tool to Find and Fill Gaps in Metabolic Networks
@@ -24704,26 +24814,6 @@ issues:
     pages:
     - '590'
     - '599'
-  - slug: RJ-2021-108
-    title: 'Software Engineering and R Programming: A Call for Research'
-    bibtitle: 'Software Engineering and R Programming: A Call for Research'
-    author: Melina Vidoni
-    bibauthor: Melina Vidoni
-    abstract: '  Abstract Although R programming has been a part of research since
-      its origins in the 1990s, few            studies address scientific software
-      development from a Software Engineering (SE) perspective. The            past
-      few years have seen unparalleled growth in the R community, and it is time to
-      push the boundaries            of SE research and R programming forwards. This
-      paper discusses relevant studies that close this            gap Additionally,
-      it proposes a set of good practices derived from those findings aiming to act
-      as a            call-to-arms for both the R and RSE (Research SE) community
-      to explore specific, interdisciplinary            paths of research.'
-    acknowledged: '2021-05-24'
-    online: '2021-12-14'
-    landing: '2021'
-    pages:
-    - '600'
-    - '623'
   - slug: RJ-2021-106
     title: 'RPESE: Risk and Performance Estimators Standard Errors with Serially Dependent
       Data'
@@ -24806,95 +24896,6 @@ issues:
     pages:
     - '642'
     - '660'
-  - slug: RJ-2021-109
-    title: We Need Trustworthy R Packages
-    bibtitle: We Need Trustworthy R Packages
-    author: William Michael Landau
-    bibauthor: William Michael Landau
-    abstract: '  Abstract There is a need for rigorous software engineering in R packages,
-      and there is a need for             new research to bridge scientific computing
-      with more traditional computing. Automated tools,             interdisciplinary
-      graduate courses, code reviews, and a welcoming developer community will continue             to
-      democratize best practices. Democratized software engineering will improve the
-      quality, correctness,             and integrity of scientific software, and
-      by extension, the disciplines that rely on it.'
-    acknowledged: '2021-08-24'
-    online: '2021-12-14'
-    CRANpkgs:
-    - testthat
-    - covr
-    - R6
-    landing: '2021'
-    pages:
-    - '661'
-    - '672'
-  - slug: RJ-2021-110
-    title: The R Developer Community Does Have a Strong Software Engineering Culture
-    bibtitle: |-
-      The R Developer Community Does Have a Strong Software
-                Engineering Culture
-    author:
-    - Maëlle Salmon
-    - Karthik Ram
-    bibauthor: Maëlle Salmon and Karthik Ram
-    abstract: '  Abstract There is a strong software engineering culture in the R
-      developer community. We recommend             creating, updating and vetting
-      packages as well as keeping up with community standards. We invite             contributions
-      to the rOpenSci project, where participants can gain experience that will shape
-      their            work and that of their peers.'
-    acknowledged: '2021-10-24'
-    online: '2021-12-14'
-    CRANpkgs:
-    - devtools
-    - roxygen2
-    - testthat
-    - tinytest
-    - dittodb
-    - vcr
-    - httptest
-    - webfakes
-    - httr2
-    - autotest
-    - goodpractice
-    - riskmetric
-    - pkgcheck
-    CTV_rev:
-    - WebTechnologies
-    - Databases
-    landing: '2021'
-    pages:
-    - '673'
-    - '696'
-  - slug: RJ-2021-111
-    title: 'The R Quest: from Users to Developers'
-    bibtitle: 'The R Quest: from Users to Developers'
-    author: Simon Urbanek
-    bibauthor: Simon Urbanek
-    abstract: '  Abstract R is not a programming language, and this produces the inherent
-      dichotomy between             analytics and software engineering. With the emergence
-      of data science, the opportunity exists to             bridge this gap, especially
-      through teaching practices.'
-    acknowledged: '2021-11-24'
-    online: '2021-12-14'
-    landing: '2021'
-    pages:
-    - '697'
-    - '712'
-  - slug: RJ-2021-112
-    title: 'Rejoinder: Software Engineering and R Programming'
-    bibtitle: 'Rejoinder: Software Engineering and R Programming'
-    author: Melina Vidoni
-    bibauthor: Melina Vidoni
-    abstract: '  Abstract It is a pleasure to take part in such fruitful discussion
-      about the relationship between Software             Engineering and R programming,
-      and what could be gain by allowing each to look more closely at the             other.
-      Several discussants make valuable arguments that ought to be further discussed.'
-    acknowledged: '2021-12-12'
-    online: '2021-12-14'
-    landing: '2021'
-    pages:
-    - '713'
-    - '733'
   - heading: News and Notes
   - slug: core
     author:
