--- a/_config.yml
+++ b/_config.yml
@@ -22876,6 +22876,13 @@ issues:
     pages:
     - '600'
     - '623'
+    CRANpkgs:
+    - genthat
+    - roxygen2
+    - pkgdown
+    - covr
+    - testthat
+    - tidyverse
   - slug: RJ-2021-109
     title: We Need Trustworthy R Packages
     bibtitle: We Need Trustworthy R Packages
@@ -22950,6 +22957,10 @@ issues:
     pages:
     - '697'
     - '712'
+    CRANpkgs:
+    - data.table
+    - RJava
+    - reticulate
   - slug: RJ-2021-112
     title: 'Rejoinder: Software Engineering and R Programming'
     bibtitle: 'Rejoinder: Software Engineering and R Programming'
@@ -23306,6 +23317,7 @@ issues:
     pages:
     - '57'
     - '69'
+    CRANpkgs: shinystan
   - slug: RJ-2021-039
     title: 'StratigrapheR: Concepts for Litholog Generation in R '
     bibtitle: 'StratigrapheR: Concepts for Litholog Generation in R'
@@ -23900,6 +23912,21 @@ issues:
     pages:
     - '266'
     - '272'
+    CRANpkgs:
+    - survreg
+    - crch
+    - MAINT.Data
+    - symbolicDA
+    - RSDA
+    - iRegression
+    - GPCSIV
+    - sn
+    - Rcpp
+    - RcppArmadillo
+    - rrcov
+    - mclust
+    - nycflights13
+    - tidyverse
   - slug: RJ-2021-089
     title: Robust and Efficient Optimization Using a Marquardt-Levenberg Algorithm
       with R Package marqLevAlg
@@ -24315,6 +24342,22 @@ issues:
     pages:
     - '419'
     - '426'
+    CRANpkgs:
+    - mgee2
+    - SAMBA
+    - misclassGLM
+    - augSIMEX
+    - kml
+    - kml3d
+    - gee
+    - wgeesel
+    - swgee
+    - MASS
+    - Matrix
+    - ggplot2
+    - mgee2k
+    - mgee2v
+    - ordGEE2
   - slug: RJ-2021-067
     title: A New Versatile Discrete Distribution
     bibtitle: A New Versatile Discrete Distribution
