Remove search feature until performance improvements are resolved

--- a/_site.yml
+++ b/_site.yml
@@ -36,4 +36,5 @@ collections:
     categories_metadata: true
     authors_metadata: true
     description: Articles published in the R Journal
+search: false
 output: distill::distill_article
