Avoid large xml files

--- a/_site.yml
+++ b/_site.yml
@@ -7,7 +7,7 @@ theme: theme.css
 favicon: resources/favicon.ico
 output_dir: "_web"
 navbar:
-  search: true
+  search: false
   logo:
     image: resources/rlogo.png
     href: index.html
@@ -25,7 +25,7 @@ navbar:
     - icon: fa fa-rss
       href: articles.xml
 rss:
-  full_content: TRUE
+  full_content: false
   categories:
     - articles
     - issues
