--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -19,13 +19,13 @@ jobs:
           ref: legacy-content
           path: legacy
 
-     - name: Merge legacy into dev _site
+     - name: Merge legacy into dev _web
        run: |
-          rsync -a legacy/ dev-branch/_site/
+          rsync -a legacy/ dev-branch/_web/
           
      - name: deploy
        uses: peaceiris/actions-gh-pages@v3
        with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dev-branch/_site
+          publish_dir: ./dev-branch/_web
           publish_branch: deploy-test
