--- a/.github/workflows/render-test.yml
+++ b/.github/workflows/render-test.yml
@@ -18,7 +18,9 @@ jobs:
      
      - name: Re-render _web
        run: |
-          Rscript -e 'install.packages("rmarkdown",,"https://cloud.R-project.org")'
+          export MAKEFLAGS=-j4
+          Rscript -e 'install.packages(c("remotes","rmarkdown"),,"https://cloud.R-project.org")'
+          Rscript -e 'remotes::install_github("rjournal/rjtools")'
           rm -rf dev-branch/_web/ && (cd dev-branch && Rscript -e 'rmarkdown::render_site()')
 
      - name: deploy
