avoid remotes for installation

--- a/.github/workflows/render-test.yml
+++ b/.github/workflows/render-test.yml
@@ -19,8 +19,7 @@ jobs:
      - name: Re-render _web
        run: |
           export MAKEFLAGS=-j4
-          Rscript -e 'install.packages(c("remotes","rmarkdown"),,"https://cloud.R-project.org")'
-          Rscript -e 'remotes::install_github("rjournal/rjtools")'
+          Rscript -e 'install.packages(c("rjtools","rmarkdown"),,c("https://rforge.net","https://cloud.R-project.org"))'
           rm -rf dev-branch/_web/ && (cd dev-branch && Rscript -e 'rmarkdown::render_site()')
 
      - name: deploy
