--- a/.github/workflows/render-test.yml
+++ b/.github/workflows/render-test.yml
@@ -16,10 +16,14 @@ jobs:
      - uses: r-lib/actions/setup-r@v2
      - uses: r-lib/actions/setup-pandoc@v2
      
-     - name: Re-render _web
+     - name: Install dependencies
        run: |
           export MAKEFLAGS=-j4
+          DEBCONF_NONINTERACTIVE_SEEN=true apt-get install -q -y libcurl4-openssl-dev
           Rscript -e 'install.packages(c("rjtools","rmarkdown"),,c("https://rforge.net","https://cloud.R-project.org"))'
+
+     - name: Re-render _web
+       run: |
           rm -rf dev-branch/_web/ && (cd dev-branch && Rscript -e 'rmarkdown::render_site()')
 
      - name: deploy
