--- a/.github/workflows/render-test.yml
+++ b/.github/workflows/render-test.yml
@@ -19,7 +19,7 @@ jobs:
      - name: Install dependencies
        run: |
           export MAKEFLAGS=-j4
-          DEBCONF_NONINTERACTIVE_SEEN=true apt-get install -q -y libcurl4-openssl-dev
+          sudo /bin/bash -c 'DEBCONF_NONINTERACTIVE_SEEN=true apt-get install -q -y libcurl4-openssl-dev'
           Rscript -e 'install.packages(c("rjtools","rmarkdown"),,c("https://rforge.net","https://cloud.R-project.org"))'
 
      - name: Re-render _web
