Switch over to the deploy branch

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,4 +1,4 @@
-name: Preview new RJournal site
+name: Publish new RJournal site from dev
 
 on:
   workflow_dispatch:
@@ -28,4 +28,4 @@ jobs:
        with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dev-branch/_web
-          publish_branch: deploy-test
+          publish_branch: deploy
