Slim down processing

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,15 +26,21 @@ jobs:
        run: |
           rm -rf _web/ && Rscript -e 'rmarkdown::render_site()'
 
-     - name: Checkout legacy content branch
-       uses: actions/checkout@v2
-       with:
-          ref: legacy-content
-          path: legacy
+     - name: Free disk space on the runner
+       run: |
+          df -h .
+          sudo rm -rf /home/linuxbrew /usr/share/miniconda /usr/local/share /usr/local/lib/android 
+          df -h .
+ 
+     - name: Extract legacy content
+       run: |
+          mkdir legacy
+          curl -sSL https://github.com/rjournal/rjournal.github.io/archive/refs/tags/legacy-content-latest.tar.gz | \
+          tar fxz --strip-components=1 -C legacy
 
      - name: Merge legacy into dev _web
        run: |
-          rsync -a legacy/ _web/
+          rsync -a --remove-source-files legacy/ _web/
 
      - name: deploy
        uses: peaceiris/actions-gh-pages@v3
