--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,10 +8,10 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
      - name: Checkout
-       uses: actions/checkout@v2
+       uses: actions/checkout@v3
 
      - uses: r-lib/actions/setup-r@v2
      - uses: r-lib/actions/setup-pandoc@v2
@@ -31,12 +31,12 @@ jobs:
           df -h .
           sudo rm -rf /home/linuxbrew /usr/share/miniconda /usr/local/share /usr/local/lib/android 
           df -h .
- 
-     - name: Extract legacy content
-       run: |
-          mkdir legacy
-          curl -sSL https://github.com/rjournal/rjournal.github.io/archive/refs/tags/legacy-content-latest.tar.gz | \
-          tar fxz --strip-components=1 -C legacy
+
+     - name: Checkout legacy content branch
+       uses: actions/checkout@v3
+       with:
+          ref: legacy-content
+          path: legacy
 
      - name: Merge legacy into dev _web
        run: |
