Add contribute page and navbar entry

--- a/_site.yml
+++ b/_site.yml
@@ -22,6 +22,8 @@ navbar:
       href: issues/2023-1
     - text: "Submit"
       href: submissions.html
+    - text: "Contribute"
+      href: contribute.html
     # - text: "About"
     #   href: about.html
     - icon: fa fa-rss
