--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,10 +8,10 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
      - name: Checkout
-       uses: actions/checkout@v2
+       uses: actions/checkout@v3
 
      - uses: r-lib/actions/setup-r@v2
      - uses: r-lib/actions/setup-pandoc@v2
@@ -26,15 +26,21 @@ jobs:
        run: |
           rm -rf _web/ && Rscript -e 'rmarkdown::render_site()'
 
+     - name: Free disk space on the runner
+       run: |
+          df -h .
+          sudo rm -rf /home/linuxbrew /usr/share/miniconda /usr/local/share /usr/local/lib/android 
+          df -h .
+
      - name: Checkout legacy content branch
-       uses: actions/checkout@v2
+       uses: actions/checkout@v3
        with:
           ref: legacy-content
           path: legacy
 
      - name: Merge legacy into dev _web
        run: |
-          rsync -a legacy/ _web/
+          rsync -a --remove-source-files legacy/ _web/
 
      - name: deploy
        uses: peaceiris/actions-gh-pages@v3
