don't remove _web so we can override failures if needed

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
 
      - name: Render _web
        run: |
-          rm -rf _web/ && Rscript -e 'rmarkdown::render_site()'
+          Rscript -e 'rmarkdown::render_site()'
 
      - name: Free disk space on the runner
        run: |
