--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
        run: |
           export MAKEFLAGS=-j4
           sudo /bin/bash -c 'DEBCONF_NONINTERACTIVE_SEEN=true apt-get install -q -y libcurl4-openssl-dev'
-          Rscript -e 'install.packages(c("rjtools","rmarkdown"),,c("https://rforge.net","https://cloud.R-project.org"))'
+          Rscript -e 'install.packages(c("rjtools","distill","rmarkdown"),,c("https://rforge.net","https://cloud.R-project.org"))'
 
      - name: Render _web
        run: |
