Updated htaccess to redirect old archive URLs

--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,16 @@
 Redirect 301 /current.html /index.html
 Redirect 301 /2009-1/ /archive/2009-1/
+
+# Redirect some old pages
+Redirect 301 /board.html /editors.html
+Redirect 301 /reviewer.html /index.html#reviewers
+Redirect 301 /reviews-etc.html /index.html
+
+# Redirect archive issues to issues folders
+RedirectMatch 301 ^/archive/([0-9]{4}-[0-9]+)/?$ /issues/$1/
+
+# Redirect individual articles and files from archive to articles folder
+RedirectMatch 301 ^/archive/[0-9]{4}/(RJ-[0-9]{4}-[0-9]{3}.*)$ /articles/$1
+
+# Catch-all: redirect any remaining archive URLs to index.html
+RedirectMatch 301 ^/archive/.*$ /index.html
