--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,12 +15,13 @@ jobs:
 
      - uses: r-lib/actions/setup-r@v2
      - uses: r-lib/actions/setup-pandoc@v2
-     
+
      - name: Install dependencies
        run: |
           export MAKEFLAGS=-j4
           sudo /bin/bash -c 'DEBCONF_NONINTERACTIVE_SEEN=true apt-get install -q -y libcurl4-openssl-dev'
-          Rscript -e 'install.packages(c("rjtools","distill","rmarkdown"),,c("https://rforge.net","https://cloud.R-project.org"))'
+          Rscript -e 'install.packages(c("pak","distill","rmarkdown"),,c("https://rforge.net","https://cloud.R-project.org"))'
+          Rscript -e 'pak::pak("rjournal/rjtools")'
 
      - name: Render _web
        run: |
@@ -29,7 +30,7 @@ jobs:
      - name: Free disk space on the runner
        run: |
           df -h .
-          sudo rm -rf /home/linuxbrew /usr/share/miniconda /usr/local/share /usr/local/lib/android 
+          sudo rm -rf /home/linuxbrew /usr/share/miniconda /usr/local/share /usr/local/lib/android
           df -h .
 
      - name: Checkout legacy content branch
