Added a contribute page

--- a/_site.yml
+++ b/_site.yml
@@ -22,6 +22,8 @@ navbar:
       href: news.html
     - text: "Submit"
       href: submissions.html
+    - text: "Contribute"
+      href: contribute.html
     - text: "Editorial board"
       href: editors.html
     # - text: "About"
