Free up more space on gh actions runner

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
      - name: Free disk space on the runner
        run: |
           df -h .
-          sudo rm -rf /home/linuxbrew /usr/share/miniconda /usr/local/share /usr/local/lib/android
+          sudo rm -rf /home/linuxbrew /usr/share/miniconda /usr/share/dotnet /usr/local/share /usr/local/lib/android $AGENT_TOOLSDIRECTORY
           df -h .
 
      - name: Checkout legacy content branch
