Free up space prior to render for GitHub preview deploy action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,12 @@ jobs:
           Rscript -e 'install.packages(c("pak","distill","rmarkdown"),,c("https://rforge.net","https://cloud.R-project.org"))'
           Rscript -e 'pak::pak("rjournal/rjtools")'
 
+     - name: Free disk space on the runner
+       run: |
+          df -h .
+          sudo rm -rf /home/linuxbrew /usr/share/miniconda /usr/share/dotnet /usr/local/lib/android
+          df -h .
+
      - name: Render _web
        run: |
           Rscript -e 'rmarkdown::render_site()'
@@ -30,7 +36,7 @@ jobs:
      - name: Free disk space on the runner
        run: |
           df -h .
-          sudo rm -rf /home/linuxbrew /usr/share/miniconda /usr/share/dotnet /usr/local/share /usr/local/lib/android $AGENT_TOOLSDIRECTORY
+          sudo rm -rf /usr/local/share $AGENT_TOOLSDIRECTORY
           df -h .
 
      - name: Checkout legacy content branch
