Updated reviewer URL in redirect

--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@ Redirect 301 /2009-1/ /archive/2009-1/
 
 # Redirect some old pages
 Redirect 301 /board.html /editors.html
-Redirect 301 /reviewer.html /index.html#reviewers
+Redirect 301 /reviewer.html /contribute.html#reviewers
 Redirect 301 /reviews-etc.html /index.html
 
 # Redirect archive issues to issues folders
