--- a/.htaccess
+++ b/.htaccess
@@ -12,5 +12,8 @@ RedirectMatch 301 ^/archive/([0-9]{4}-[0-9]+)/?$ /issues/$1/
 # Redirect individual articles and files from archive to articles folder
 RedirectMatch 301 ^/archive/[0-9]{4}/(RJ-[0-9]{4}-[0-9]{3}.*)$ /articles/$1
 
+# Redirect /archive/YYYY-N/filename.pdf -> /news/RJ-YYYY-N-filename/RJ-YYYY-N-filename.pdf
+RedirectMatch 301 ^/archive/([0-9]{4})-([0-9])/([^/]+)\.pdf$ https://journal.r-project.org/news/RJ-$1-$2-$3/RJ-$1-$2-$3.pdf
+
 # Catch-all: redirect any remaining archive URLs to index.html
 RedirectMatch 301 ^/archive/.*$ /index.html
