Include .htaccess redirects in rendered site

--- a/_site.yml
+++ b/_site.yml
@@ -6,6 +6,8 @@ base_url: https://journal.r-project.org/
 theme: theme.css
 favicon: resources/favicon.ico
 output_dir: "_web"
+include: 
+  - .htaccess
 navbar:
   search: false
   logo:
